force-app/main/default/objects/ER_Order__c/ER_Order__c.object-meta.xml
<CustomObject>
    <label>Order (Edenred)</label>
    <nameField>
        <displayFormat>OR-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>