force-app/main/default/objects/ER_Order__c/fields/Back_Office_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Back Office Order Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>