force-app/main/default/objects/ER_Order__c/fields/Cards_Production_costs_new_cards__c.field-meta.xml
<CustomField>
    <fullName>Cards_Production_costs_new_cards__c</fullName>
    <label>Cards - Production costs new cards</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>