force-app/main/default/objects/ER_Order__c/fields/Cards_Replacement_fee__c.field-meta.xml
<CustomField>
    <fullName>Cards_Replacement_fee__c</fullName>
    <label>Cards - Replacement fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>