force-app/main/default/objects/ER_Order__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>IF(Commission_Fee__c *  Order_Amount__c  &gt;  0, MAX(Commission_Fee__c *  Order_Amount__c,  Minimum_commission__c), 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>