force-app/main/default/objects/ER_Order__c/fields/Commission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Commission_Fee__c</fullName>
    <label>Commission Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>