force-app/main/default/objects/ER_Order__c/fields/ERAT_BillableService__c.field-meta.xml
<CustomField>
    <fullName>ERAT_BillableService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billable Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>