force-app/main/default/objects/ER_Order__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <label>Main Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>