force-app/main/default/objects/ER_Order__c/fields/Minimum_commission__c.field-meta.xml
<CustomField>
    <fullName>Minimum_commission__c</fullName>
    <label>Minimum commission</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>