force-app/main/default/objects/ER_Order__c/fields/Number_of_cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_cards__c</fullName>
    <label>Number of cards</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>