force-app/main/default/objects/ER_Order__c/fields/Order_CMO_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_CMO_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order CMO ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>