force-app/main/default/objects/ER_Order__c/fields/Periodicity_months__c.field-meta.xml
<CustomField>
    <fullName>Periodicity_months__c</fullName>
    <label>Periodicity (months)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>