force-app/main/default/objects/ER_Order__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <length>80</length>
    <type>Text</type>
</CustomField>