force-app/main/default/objects/ER_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF(
   NOT(ISBLANK( ERAT_BillableService__c )),
    ERAT_BillableService__r.Name ,

CASE(Product_Code__c,
&quot;1&quot;, &quot;Ticket Service&quot;,
&quot;2&quot;, &quot;Ticket Compliments&quot;,
&quot;3&quot;, &quot;Ticket Restaurant&quot;, 
&quot;4&quot;, &quot;Wellness Gutschein&quot;, 
&quot;5&quot;, &quot;Ticket Junior&quot;,
&quot;6&quot;, &quot;Ticket Shopping&quot;,
&quot;7&quot;, &quot;Ticket Service Card&quot;,
&quot;8&quot;, &quot;Ticket Restaurant Card&quot;,
&quot;&quot;)
)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>