force-app/main/default/objects/ER_Order__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <label>Salesman</label>
    <length>80</length>
    <type>Text</type>
</CustomField>