force-app/main/default/objects/ER_Order__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport</label>
    <type>Checkbox</type>
</CustomField>