force-app/main/default/objects/ER_Order__c/fields/Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>Transport_Cost__c</fullName>
    <label>Transport Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>