force-app/main/default/objects/ER_Order__c/recordTypes/Affiliate_Order_RT.recordType-meta.xml
<RecordType>
    <fullName>Affiliate_Order_RT</fullName>
    <active>true</active>
    <label>Affiliate Order</label>
</RecordType>