force-app/main/default/objects/ER_Order__c/recordTypes/Client_Order_RT.recordType-meta.xml
<RecordType>
    <fullName>Client_Order_RT</fullName>
    <active>true</active>
    <label>Client Order</label>
</RecordType>