force-app/main/default/objects/ER_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Order_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>